# CPP_Basics

./: .gitignore  Debugging.txt  README.md
000_Test/: Common.h  main  main.cpp  output
001_Basics/: main  main.cpp
002_Compiler/: Multiply  Multiply.cpp  Simple.cpp  main  main.cpp
003_Linker/: Arthematic  Arthematic.cpp  Header.h  Log.cpp  Math  Math.cpp  Print.h
004_Types/: main  main.cpp
005_Functions/: main  main.cpp
006_Headers/: Common.h  Log.cpp  Log.h  main  main.cpp
007_Conditions/: Log.cpp  Log.h  main  main.cpp
008_Loops/: main  main.cpp
009_Control_Flow/: Log.h  main  main.cpp
010_Pointers/: Execution.h  main  main.cpp
011_References/: main  main.cpp
012_Classes/: main  main.cpp
013_Structs/: main  main.cpp
014_Classes2/: main  main.cpp
014_Static/: config.h  main.cpp  static
015_Static/: main  static.cpp  static.h
015_Static_Classes/: entity.cpp  entity.h  main.cpp
016_Enums/: Log.cpp  enums.cpp
016_Static_Classes/: entity.cpp  main
017_Constructors/: main.cpp
017_Enums/: Log  enums.h  main  main.cpp
018_Constructors/: main  main.cpp
018_Destructors/: main.cpp
019_Destructors/: main
019_Inheritance/: entities.cpp  entities.h
020_Inheritance/: main  main.cpp
020_Virtual_Functions/: main.cpp
021_Interfaces/: main.cpp
021_Virtual_Functions/: main  main.cpp
022_Interfaces/: main
022_Visibility/: main.cpp
023_NULL/: basic.cpp  basic.h  data.h  implementation.h  main.cpp
024_Arrays/: main.cpp
024_NULL/: implementation.cpp
025_Arrays/: main.cpp
025_Macros/: main.cpp
026_Macros/: data.h
027_Auto/: main.cpp
027_Types_2/: main.cpp
028_Casting/: main.cpp
029_Casting/: custom_types.cpp  custom_types.h
029_Function_Pointers/: main.cpp
030_Lambdas/: main.cpp
031_Pointers_2/: main.cpp
032_LifeTimes/: main.cpp
033_Constexpr/: main.cpp
034_Using_TypeDef/: main.cpp
035_Operators/: main.cpp
036_Copy_Constructors/: main.cpp
037_Move_Constructors/: main.cpp
038_Templates/: main.cpp
039_Classes2/: main.cpp
040_Namespaces/: main.cpp
041_Threading/: algebra.h  main.cpp
042_Timing/: main.cpp  rotating.cpp  rotating.h
043_L_R_values/: main.cpp
044_Implicit_Explicit/: main.cpp
045_Tuples/: main.cpp
046_Maps/: City.h
047_Structured_Bindings/: main.cpp
049_Singletons/: main.cpp
050_Reinterpret_Cast/: main.cpp
051_Pointers_3/: main.cpp
056_Build_Systems/CMake/03_Custom_Libraries/: CMakeLists.txt  main.cpp
056_Build_Systems/CMake/03_Custom_Libraries/lib/: CMakeLists.txt  hashing.cpp
056_Build_Systems/CMake/03_Custom_Libraries/lib/include/: hashing.h
056_Build_Systems/CMake/04_CustomLibs/customlib/: CMakeLists.txt  stringstream.cpp
056_Build_Systems/CMake/04_CustomLibs/customlib/include/: stringstream.h
057_C_Structs/: CMakeLists.txt  main.c
057_C_Structs/include/: dist.h
058_Args/: CMakeLists.txt  main.cpp
(+434 files in other folders)
